# ds-thread-player

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.build  Dockerfile.win  README.md  build.sh  build_win.sh  config.yaml  run_example.sh
.github/workflows/: build_release.yml  patchdog.yml
src/: db.rs  discord.rs  main.rs  playback.rs  tests.rs
src/ds_functions/: function_voice.rs  mod.rs  parse_input.rs
src/error/: mod.rs  snafu_error.rs
src/yaml/: parser.rs
