[package]
name = "ds_thread_player"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version="0.12.4", features=["voice"] }
tokio-postgres = { version="0.7.13", features = ["with-chrono-0_4"] }
dotenv = "0.15.0"
rodio = { version = "0.17", features = ["symphonia"] }
audiopus = "0.2"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "sync", "full"] }
chrono = "0.4.41"
songbird = { version = "0.5.0", features = ["serenity", "driver", "builtin-queue"] }
symphonia = "0.5.4"
reqwest = "0.12.23"
rayon = "1.11.0"
youtube_dl = "0.10.0"
futures = "0.3.31"
url = "2.5.7"
once_cell = "1.21.3"
num_cpus = "1.17.0"
yaml-rust2 = "0.10.4"
diesel = "2.3.3"
snafu = "0.8.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["tracing-log", "fmt"] }
opentelemetry_sdk = { version = "0.31.0", features = [
    "experimental_trace_batch_span_processor_with_async_runtime", "rt-tokio-current-thread", "rt-tokio"
    ] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32.0"
opentelemetry-stdout = "0.31.0"

